CRM_Connections/salesforce/force-app/main/default/objects/Chat_Session__c/Chat_Session__c.object-meta.xml
<CustomObject>
    <label>Chat Session</label>
    <pluralLabel>Chat Sessions</pluralLabel>
    <nameField>
        <label>Chat Session Number</label>
        <type>AutoNumber</type>
        <displayFormat>CS-{00000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>