CRM_Connections/salesforce/force-app/main/default/objects/Chat_Session__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>