CRM_Connections/salesforce/force-app/main/default/objects/Chat_Session__c/fields/Transcript_Json__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Json__c</fullName>
    <label>Transcript Json</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>