CRM_Connections/salesforce/force-app/main/default/objects/Chat_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Chat_Sessions</relationshipName>
    <relationshipLabel>Chat Sessions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>